<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    tools:context=".HomePage">

    <!--TOOLBAR-->
    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/appName"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/imageButtonBookMark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageButtonInformations" />

    <ImageButton
        android:id="@+id/imageButtonAddPublication"
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/appareil_photo_icon" />

    <ImageButton
        android:id="@+id/imageButtonBookMark"
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@color/transparent"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonAddPublication"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_bookmark_fill" />

    <ImageButton
        android:id="@+id/imageButtonInformations"
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@color/transparent"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonBookMark"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/informations_icon" />


    <ListView
        android:id="@+id/homePageListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonInformations"
        android:divider="@color/white"
        android:dividerHeight="20dp"
        android:layout_marginTop="20dp"
        android:paddingBottom="80dp" />


    <LinearLayout
        android:id="@+id/filterLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:orientation="vertical"
        android:background="@drawable/shape_filterbar"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonInformations">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="15dp"
            android:layout_weight="2">

            <Spinner
                android:id="@+id/spinner"
                android:paddingStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="14sp"
                android:layout_weight="2"
                android:drawSelectorOnTop="true"
                android:entries="@array/villeOuPays"
                android:popupBackground="@drawable/shape_filterbar"/>

            <EditText
                android:id="@+id/input_filters"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:layout_weight="1"
                android:hint="@string/input_text_country_or_city"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:background="@drawable/shape_input"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="2">

            <TextView
                android:id="@+id/rayonText"
                android:paddingStart="15dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="3"
                android:textColor="@color/black"
                android:text="@string/rayon"
                android:textSize="14sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">
                <SeekBar
                    android:id="@+id/seekBar"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:max="200"
                    app:thumbColor="#ffb300"
                    app:trackHeight="12dp"/>

                <TextView
                    android:id="@+id/km"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/kilometres"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="2"
        android:padding="20dp"
        android:gravity="center">

        <Button
            android:id="@+id/dontsearch"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/annuler"
            android:layout_marginRight="20dp"
            app:backgroundTint="@null"
            android:textSize="10sp"
            app:layout_constraintEnd_toStartOf="@+id/YES"
            android:background="@drawable/selector_button_no"
            android:textColor="@color/cardview_dark_background"/>
        <Button
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/rechercher"
            android:textSize="10sp"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toStartOf="@+id/YES"
            android:background="@drawable/selector_button_yes"
            android:textColor="@color/white"/>
    </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/details_filters"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@drawable/selector_button_yes"
        android:text="@string/addFiltres"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonInformations"/>

</androidx.constraintlayout.widget.ConstraintLayout>